--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-bootstrap": "^2.1.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "util": "^0.12.4",
     "web-vitals": "^2.1.2"
   },
