--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "portfolio_react_v1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mandy2324.github.io/portfolio_react_v1/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
-    "homepage": "https://mandy2324.github.io/Portfolio_react_v1/",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-bootstrap-validation": "^0.1.11",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
